2004-04-28  Bruno Haible  <bruno@clisp.org>

	* dcigettext.c (ISSLASH, IS_ABSOLUTE_PATH, IS_PATH_WITH_DIR): Treat
	Cygwin like Windows, since it now accepts Windows pathnames.
	* l10nflist.c (ISSLASH, IS_ABSOLUTE_PATH): Treat Cygwin like Windows,
	since it now accepts Windows pathnames.
	* localcharset.c (ISSLASH): Treat Cygwin like Windows, since it now
	accepts Windows pathnames.
	* relocatable.c (ISSLASH, IS_PATH_WITH_DIR, FILESYSTEM_PREFIX_LEN):
	Treat Cygwin like Windows, since it now accepts Windows pathnames.
	(compute_curr_prefix): Likewise.
	Reported by Derek Robert Price <derek@ximbiot.com>.

2004-04-23  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (get_charset_aliases): Allow the CHARSETALIASDIR
	environment variable to override LIBDIR.
	Suggested by Matthias Clasen <mclasen@redhat.com>.

2004-04-20  Jim Meyering  <jim@meyering.net>
            Bruno Haible  <bruno@clisp.org>

	* localcharset.c (get_charset_aliases) [!VMS && !WIN32]: Don't leak
	memory when realloc fails.

2004-03-02  Bruno Haible  <bruno@clisp.org>

	* localename.c (_nl_locale_name): Add info about default territory for
	Basque, Mongolian, Russian, Tamil. Map Norwegian to nb, not no.

2004-02-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (install-exec, installdirs, uninstall): Install
	preloaded_libintl.so only on glibc systems, not on OpenBSD.
	Reported by Han Boetes <han@mijncomputer.nl>.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-21  Bruno Haible  <bruno@clisp.org>

	* config.charset: Add support for MacOS X (Darwin).

2004-01-18  Bruno Haible  <bruno@clisp.org>

	* localename.c (_nl_locale_name): Use two-letter ISO 639 codes for
	Divehi, Fulfulde, Igbo, Kanuri, Venda.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 7:0:4.

2003-12-02  Jakub Jelinek  <jakub@redhat.com>
